--- a/src/components/Components.css
+++ b/src/components/Components.css
@@ -33,3 +33,57 @@
 .nav-links a:hover {
     color: white;
 }
+
+.view-details-button {
+    cursor: pointer;
+    background-color: #fbdc61;
+    color: #856b02;
+    border: none;
+    padding: 0.25rem 0.5rem;
+    border-radius: 5px;
+    font-family: Impact, sans-serif;
+}
+
+.view-details-button:hover {
+    background-color: #e6c94f;
+    color: #5a4700;
+}
+
+.description-text-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
+}
+
+.description-background-overlay {
+    background-color: white;
+    padding: 2rem;
+    color: black;
+    border-radius: 5px;
+    max-width: 500px;
+    width: 90%;
+    font-size: 20px;
+}
+
+.close-button {
+    margin-top: 1rem;
+    padding: 0.5rem 1rem;
+    border-radius: 5px;
+    border: none;
+    cursor: pointer;
+    background-color: #dc3545;
+    color: white;
+    transition: background-color 0.2s ease;
+}
+
+.close-button:hover {
+    background-color: #c82333;
+    /* slightly darker red on hover */
+}
