--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -4,7 +4,7 @@
     color: rgb(226, 190, 45);
     display: flex;
     padding: 1rem 2rem;
-    font-size: 2rem;
+    font-size: 3rem;
     font-family: Impact, sans-serif;
     box-shadow: 0 10px 2000px #003399;
     border-bottom: 1px solid #ffcc00;
@@ -25,7 +25,7 @@
     border-radius: 8px;
     padding: 1px;
     text-align: center;
-    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 2px 6px rgb(255, 255, 255);
 }
 
 .ranking {
@@ -40,8 +40,11 @@
 .item-title {
     color: #003399;
     display: flex;
+    justify-content: center;
+    align-items: center;
     padding: 1rem 1rem;
     font-size: 2rem;
     font-family: Impact, sans-serif;
-    box-shadow: 0 20px 10px #dfb304;
+    min-height: 12vh;
+    box-shadow: 0 10px 20px #ffffff;
 }
